# imglib-itk-experiments

./: README.md  pom.xml
native/: CMakeLists.txt
native/src/: CMakeLists.txt  NativeImageByteBufferProxy.cpp  NativeImageProxy.cpp
src/main/java/net/imagej/itk/: ImageByteBufferProxy.java  ImageProxy.java  RandomAccessibleImage.java  SneakyImage.java
src/test/java/net/imagej/itk/test/: TestImageProxy.java
